# mtg-saga

./: LICENSE  README.md
backend/: Cargo.toml  docker-compose.yml
backend/application/: Cargo.toml
backend/application/src/: main.rs  middleware.rs  routes.rs
backend/application/src/routes/: auth.rs  user.rs
backend/bindings/: User.ts
backend/domain/: Cargo.toml
backend/domain/src/model/: session.rs  user.rs
backend/domain/src/repository/: session_repository.rs  user_repository.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/src/repository/: session.rs  user.rs
backend/src/: auth.rs  main.rs  routes.rs  types.rs  users.rs
backend/usecase/: Cargo.toml
backend/usecase/src/: lib.rs  session.rs  user.rs
backend_old/: docker-compose.yml
backend_old/src/: types.rs  users.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/profile/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/profile/[name]/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/signup/: +page.server.ts  +page.svelte
