[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
dotenvy = "0.15.7"
futures = "0.3.30"
jwt-simple = "0.12.10"
mongodb = "3.1.0"
password-auth = "1.0.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
ts-rs = "9.0.1"
