[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
argon2 = "0.5.3"
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { workspace = true, features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
